--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         <button onclick="calcula()">Prever futuro...</button>
         <br>
         <br>
-        <h2 id="encheLinguica"></h2>
-        <h2 id="encheLinguica2"></h2>
+        <h2 id="enrolando"></h2>
+        <h2 id="lugarF"></h2>
+        <h2 id="filhoF"></h2>
+        <h2 id="dinheiroF"></h2>
+        <h2 id="casamentoF"></h2>
 
 
     </div>
