--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="text" id="lugar3" placeholder="lugar 3">
 
 
-        <button onclick="calcula()">Prever futuro...</button>
+        <button onclick="calcula()" id="btn">Prever futuro...</button>
         <br>
         <br>
         <h2 id="enrolando"></h2>
